WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49807
Don't call invalidateSVGAttributes() from the setFooBaseValue() methods
https://bugs.webkit.org/show_bug.cgi?id=49807
Summary
Don't call invalidateSVGAttributes() from the setFooBaseValue() methods
Nikolas Zimmermann
Reported
2010-11-19 08:14:26 PST
set##UpperProperty##BaseValue() used to call invalidateSVGAttributes(), because it was used to propagate SVG DOM changes to the elements. This is no longer true, and we can avoid calling this method. Now, when doing: rectElement.setAttribute("x", "150"); rectElement.getAttribute("x"); we would reconstruct the 'x' attribute from the SVG DOM baseVal, which is not necessary in any way.
Attachments
Patch
(8.17 KB, patch)
2010-11-19 08:20 PST
,
Nikolas Zimmermann
krit
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2010-11-19 08:20:33 PST
Created
attachment 74392
[details]
Patch
Dirk Schulze
Comment 2
2010-11-19 08:26:27 PST
Comment on
attachment 74392
[details]
Patch r=mw
Nikolas Zimmermann
Comment 3
2010-11-19 08:29:34 PST
Landed in
r72405
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug