2010-11-19  Nikolas Zimmermann  <nzimmermann@rim.com>

Reviewed by Dirk Schulze.

        Don't call invalidateSVGAttributes() from the setFooBaseValue() methods
        https://bugs.webkit.org/show_bug.cgi?id=49807

        Covered by existing tests.

        * svg/SVGComponentTransferFunctionElement.cpp:
        (WebCore::SVGComponentTransferFunctionElement::parseMappedAttribute): Use setFooBaseValue(newList) instead of fooBaseValue() = newList;
        * svg/SVGFEColorMatrixElement.cpp:
        (WebCore::SVGFEColorMatrixElement::parseMappedAttribute): Ditto.
        * svg/SVGFEConvolveMatrixElement.cpp:
        (WebCore::SVGFEConvolveMatrixElement::parseMappedAttribute): Ditto.
        * svg/SVGGradientElement.cpp:
        (WebCore::SVGGradientElement::parseMappedAttribute): Ditto.
        * svg/SVGPatternElement.cpp:
        (WebCore::SVGPatternElement::parseMappedAttribute): Ditto.
        * svg/SVGStyledTransformableElement.cpp:
        (WebCore::SVGStyledTransformableElement::parseMappedAttribute): Ditto.
        * svg/SVGTextElement.cpp:
        (WebCore::SVGTextElement::parseMappedAttribute): Ditto.
        * svg/SVGTextPositioningElement.cpp:
        (WebCore::SVGTextPositioningElement::parseMappedAttribute): Ditto.
        * svg/properties/SVGAnimatedPropertyMacros.h: Don't call invalidateSVGAttributes() in setFooBaseValue().


Canonical link: https://commits.webkit.org/62867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72405 268f45cc-cd09-0410-ab3c-d52691b4dbfc