WebCore/svg/SVGTextElement.cpp
@@ -54,7 +54,7 @@ void SVGTextElement::parseMappedAttribute(Attribute* attr)
             newList.clear();
 
         detachAnimatedTransformListWrappers(newList.size());
-        transformBaseValue() = newList;
+        setTransformBaseValue(newList);
     } else
         SVGTextPositioningElement::parseMappedAttribute(attr);
 }
