WebCore/svg/properties/SVGAnimatedPropertyMacros.h
@@ -111,8 +111,6 @@ PropertyType& LowerProperty##BaseValue() const \
 void set##UpperProperty##BaseValue(const PropertyType& type) \
 { \
     m_##LowerProperty.value = type; \
-    SVGElement* contextElement = GetOwnerElementForType<OwnerType, IsDerivedFromSVGElement<OwnerType>::value>::ownerElement(this); \
-    contextElement->invalidateSVGAttributes(); \
 } \
 \
 void synchronize##UpperProperty() \
